--- a/API Fetching/style.css
+++ b/API Fetching/style.css
@@ -22,4 +22,29 @@
     width: 8rem;
     height: 1.5rem;
     text-align: center;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+
+#dataDisplay{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr));
+    gap: 1.25rem;
+    padding: 1.25rem;
+    margin: 0 0 0 10rem ;
+}
+
+.product{
+   border: 0.0625rem solid #e7b3d6;
+   border-radius: 0.5rem;
+   padding: 0.938rem;
+   background-color: #a472fa;
+   box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+   transition: transform 0.2s;
+   font-weight: 500;
+}
+
+.product:hover {
+    transform: translateY(-0.8rem); /* Slight lift effect on hover (5px) */
+    box-shadow: 1px 2px rgba (0,0,0,0.2);
 }
