--- a/API Fetching/style.css
+++ b/API Fetching/style.css
@@ -37,7 +37,7 @@
 .product{
    border: 0.0625rem solid #e7b3d6;
    border-radius: 0.5rem;
-   padding: 0.938rem;
+   padding: 1rem;
    background-color: #a472fa;
    box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s;
@@ -47,4 +47,28 @@
 .product:hover {
     transform: translateY(-0.8rem); /* Slight lift effect on hover (5px) */
     box-shadow: 1px 2px rgba (0,0,0,0.2);
+}
+
+
+/* Stock div styling */
+
+#stockDisplay{
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(12.5rem,1fr));
+    gap:1.25rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0 0 10rem ;
+
+
+}
+
+.stock{
+    border: 0.125rem solid #a472fa;
+    padding: 1.25rem;
+    border-radius: 0.625rem 1rem 1rem 1rem;
+    transition: transform 0.2s;
+    
+}
+.stock:hover{
+    transform: translateY(-0.8rem);
 }
